prevent range labels from overlapping

--- a/app/src/styles/charts.css
+++ b/app/src/styles/charts.css
@@ -268,6 +268,14 @@ td.chart-title {
   font-size: 13px;
   line-height: 16px;
 }
+.line-chart-ylabel-range-above {
+  position: relative;
+  top: 10px;
+}
+.line-chart-ylabel-range-below {
+  position: relative;
+  top: -10px;
+}
 
 .horizontal-bar-label {
   color: #E19900;
